# AddrNormalizer

./: pyproject.toml
.streamlit/: config.toml
addr_normalizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
addrnorm/clean/: text_normalize.py
addrnorm/io/: reader.py  writer.py
addrnorm/libpostal/: client.py  postprocess.py
addrnorm/logging_cfg/: setup.py
addrnorm/parse/: country.py  locality.py  region.py  street.py  zipcode.py
addrnorm/qa/: reports.py
addrnorm/rules/: registry.py
addrnorm/synth/: assemble.py
app/: main.py
app/components/: file_uploader.py  options_panel.py
configs/: config.yaml  geo_profile.yaml  zip_patterns.yaml
configs/countries/: _aliases.yaml  _index.yaml
configs/street_abbr/: default.yaml
logs/: examples_1759908185.txt  examples_1759908934.txt  examples_1759909067.txt  examples_1759915992.txt  examples_1759917482.txt  examples_1759917656.txt  examples_1759918573.txt  examples_1759918835.txt  examples_1759918864.txt
