[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "addr-normalizer"
version = "0.0.1"
description = "Address normalization toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.37",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "python-slugify>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["addrnorm*"]
